Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97838

Recording broken on Apple Silicon / M1

XMLWordPrintable

    • macOS
    • e95f7256fb (qt/qtmultimedia/dev) 711b358811 (qt/qtmultimedia/6.3) 349d81b571 (qt/qtmultimedia/6.2) 349d81b571 (qt/tqtc-qtmultimedia/6.2)

      • audiosource example crashes
      • audiorecorder example outputs zero byte files, and has sample rate set to 0

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dorisverria Doris Verria
            qtdae2 Damien Elmes
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes