Don't crash if system has no audio device

Fixes: QTBUG-97838
Change-Id: I355958b99f62fc85228b3dd3afd06aa01005008c
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit e95f7256fb534c3dd03b3091dd9835cd2f33d327)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>